fix: Correct map & sidebar layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,18 +64,16 @@ background-position: center center;
 
 .map-container{
     height: 100vh;
-    width: 100vw;
-    overflow: hidden;
+    width: 100%;
 }
 
-/*div.style {
+div.style {
     max-height: 100vh;
-}*/
+}
 
 #sideNav-locations-container{
     max-height: 99.5vh !important;
-    /*margin-top: 5vh;
-    overflow-y: scroll;*/
+    overflow-y: scroll;
     overflow-x: hidden;
     background-color: #f7fa3885;
     font-weight: 800;
@@ -86,13 +84,17 @@ background-position: center center;
 #map {
     height: 99.5vh;
     width: 100%;
-    /*margin-top: 1vh;*/
 }
 
-#map-div{
+/*#map-div{   //leave out for time being !!!!!
     height: 96.5vh;
-    width: 100vw;
-}
+    width: 100%;
+    /*overflow-x: hidden;*
+    background-color: #f7fa3885;
+    font-weight: 800;
+    /*padding-top: 50px;
+    padding-bottom: 50px;*
+}*/
 
 /* Add margin to Leaflet zoom control container */
 .leaflet-top, .leaflet-bottom {
@@ -171,11 +173,11 @@ h5{
     text-shadow: 0 0 #000000;
 }
 
-/* Override Bootstrap or Leaflet! ????? */
-.map-container .row {
+/* Override Bootstrap or Leaflet! ????? */  /*  Not sure if this is still required - double check!!!! */
+/*.map-container .row {
    display: flex !important;
    flex-wrap: inherit !important;
-}
+}*/
 
 
 /* ********************************************************* SECTION THREE - Text View */
@@ -214,7 +216,6 @@ h5{
     margin-right: 5%;
 }
 
-/* git push !!!!!*/
 
 
 /* ********************************************************* MEDIA QUERIES */
@@ -228,7 +229,8 @@ h5{
         z-index: 1100;
         bottom: 0;
         left: 0;
-        background-color: #f7fa3885;
+        /*background-color: #f7fa3885;*/
+        background-color: #000000;
         overflow-y: scroll;
         padding-top: 60px;
         padding-bottom: 70px;
@@ -247,8 +249,8 @@ h5{
         margin-bottom: 20px;
         margin-left: 200px;
     }
-    .leaflet-control-attribution a {
+    /*.leaflet-control-attribution a {
         text-decoration: none;
-        margin-right: 15vw;
-    }
+        margin-bottom: 100px;
+    }*/
 }
